{
  "sourceLanguage" : "en",
  "strings" : {
    "Change" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "التغير"
          }
        }
      }
    },
    "Connected" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "متصل"
          }
        }
      }
    },
    "Connecting" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "جارٍ الاتصال"
          }
        }
      }
    },
    "Disconnected" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "غير متصل"
          }
        }
      }
    },
    "Price" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "السعر"
          }
        }
      }
    },
    "Sort" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "الترتيب"
          }
        }
      }
    },
    "Start" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "تشغيل"
          }
        }
      }
    },
    "Stocks" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "الأسهم"
          }
        }
      }
    },
    "Stop" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "إيقاف"
          }
        }
      }
    }
  },
  "version" : "1.0"
}